refactor: Упрощен и исправлен CsvDataReader